db setup if u want

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie App</title>
     <link rel="stylesheet" href="style.css">
+    <button id="savedmovies"><a href = "saved.html">Your Movies</a></button>
 </head>
 <body>
     <div class="container">
