fully functional favourites list and watchlist

--- a/saved.html
+++ b/saved.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saved Movies</title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id = ''>
-        <h1> Your Favourites</h1>
-        
-        <h1>Your Watchlist</h1>
+    <div class="container">
+        <h1>Your Saved Movies</h1>
+        <h2>Favourites</h2>
+        <ul id="favourites-list" class="movie-list"></ul>
+        <h2>Watchlist</h2>
+        <ul id="watchlist-list" class="movie-list"></ul>
     </div>
-    <script href = ''></script>
+    <script src="saved.js"></script>
 </body>
 </html>
