--- a/saved.html
+++ b/saved.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <a href="index.html" class="home-btn button">Home</a>
         <h1>Your Saved Movies</h1>
         <h2>Favourites</h2>
         <ul id="favourites-list" class="movie-list"></ul>
