--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie App</title>
     <link rel="stylesheet" href="style.css">
-    <button id="savedmovies"><a href = "saved.html">Your Movies</a></button>
+    <a id="your-movies-btn" href="saved.html">Your Movies</a>
 </head>
 <body>
     <div class="container">
         <h1>Movie App</h1>
+        <p>Search and save any movie reviews of interest..</p>
         <form class="search-form" autocomplete="off">
             <input type="text" id="search-bar" placeholder="Search for a movie...">
             <div id="suggestions" class="suggestions-list"></div>
-            <button type="submit">Search</button>
+            <button type="submit" id="search-btn">Search</button>
         </form>
         
         <div id="movie-info-placeholder">
